# amplifier

./: .clang-format  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.txt  annotated.html  classes.html  dfa_8h.html  dfa_8h_source.html  dict_8h.html  dict_8h_source.html  dict_notes.html  dir_2feacc9793643faf2bbe69a39ab4e69d.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_62677d45c2e9578ec1cb429fe8bdc3d5.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8b4694c484d7b506025fd61124056211.html  dir_b79ed5b30378400cc37da80159a4c833.html  dir_d5e2c64181741f7b450f0da7e28bf649.html  files.html  futaba.c  futaba_test.ftb  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  lang_8h.html  lang_8h_source.html  main.scm  md_src_naive_dict_notes.html  memo_8h.html  memo_8h_source.html  menudata.js  mtsh.c  pages.html  panic_8h.html  panic_8h_source.html  (+19 more)
cmp/: 0001-one-big-manager-or-many-small-ones.c
example/: cons_lambda.scm  coutination.scm  fac_with_limit.scm  y_combinator.scm
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  (+7 more)
src/: CMakeLists.txt  dfa.c  dfa.h  dfa_test.c
src/auto/: CMakeLists.txt  dfa.c  dfa.h  dfa_test.c
src/naive/: CMakeLists.txt  dict.c  dict.h  dict_note.md  dict_test.c  lang.c  lang.h  lang_test.c  memo.c  memo.h  memo_test.c  panic.c  panic.h  panic_test.c  sand.c  sand.h  sand_test.c
